--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -5,6 +5,8 @@
     display: flex;
     text-align: left;
     margin: 20px auto;
+    background-color: cadetblue;
+    color: white;
 }
 
 .home-info img {
@@ -12,16 +14,18 @@
     border: 1px solid red;
     padding: 5px;
     border-radius: 5px;
+    /* background-color: black; */
 }
 
 .info {
     padding: 5px 0px 5px 10px;
 }
 
-.grid {
+.grid-home {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     /* border: 1px solid blue; */
     margin: 20px auto;
     width: 60%;
+    /* background-color: cadetblue; */
 }
