--- a/src/Components/QuizUI/QuizUI.css
+++ b/src/Components/QuizUI/QuizUI.css
@@ -1,10 +1,14 @@
 .quiz-ui img {
     width: 18rem;
+    background-color: cadetblue;
+    border-radius: 10px;
 }
 
 .quiz-ui {
     border: 1px solid slategray;
     border-radius: 10px;
+    margin: 10px;
+    width: 18rem;
 }
 
 .btn-quiz {
