--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -1,8 +1,10 @@
 .qAndA {
-    border: 1px solid gold;
+    /* border: 1px solid gold; */
     border-radius: 15px;
-    background-color: beige;
+    background-color: #116466;
+    color: whitesmoke;
     margin: 15px auto;
     padding: 10px;
     width: 60%;
+    text-align: start;
 }
