--- a/src/Components/QuizDetails/QuizDetails.css
+++ b/src/Components/QuizDetails/QuizDetails.css
@@ -5,6 +5,7 @@
     margin: 10px auto;
     background-color: #1e2555;
     padding: 3%;
+    /* position: relative; */
 }
 
 .btn-opt {
@@ -12,6 +13,7 @@
     color: white;
     border-radius: 15px;
     background-color: #481449;
+    padding: 1rem;
 }
 
 .btn-opt:hover {
@@ -23,4 +25,12 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     padding: 15px;
+}
+
+.icon {
+    font-size: large;
+    color: lightgoldenrodyellow;
+    margin-top: 2rem;
+    /* position: absolute; */
+    margin-left: 90%;
 }
