--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -11,7 +11,7 @@
 
 .home-info img {
     width: 45%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     padding: 5px;
     border-radius: 5px;
     /* background-color: black; */
@@ -28,4 +28,42 @@
     margin: 20px auto;
     width: 60%;
     /* background-color: cadetblue; */
+}
+
+
+@media screen and (min-width:991px) and (max-width:1199px) {
+    .home-info {
+        display: flex;
+
+    }
+}
+
+@media screen and (max-width:767px) {
+    .home-info {
+        display: flex;
+        flex-wrap: wrap;
+        border: 2px solid khaki;
+        border-radius: 10px;
+        /* width: 100; */
+        text-align: left;
+        margin: 20px auto;
+        background-color: cadetblue;
+        color: white;
+    }
+
+    .home-info img {
+        width: 100%;
+        padding: 5px;
+        border-radius: 5px;
+    }
+
+    .alignment {
+        margin: 0 auto;
+    }
+
+    .grid-home {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin: 0 auto;
+    }
 }
