--- a/src/Components/QuizUI/QuizUI.css
+++ b/src/Components/QuizUI/QuizUI.css
@@ -14,3 +14,21 @@
 .btn-quiz {
     width: 100%;
 }
+
+@media screen and (min-width:991px) and (max-width:1199px) {}
+
+
+@media screen and (max-width:767px) {
+    .quiz-ui img {
+        width: 15rem;
+        background-color: cadetblue;
+        border-radius: 10px;
+    }
+
+    .quiz-ui {
+        border: 1px solid slategray;
+        border-radius: 10px;
+        margin: 1rem auto;
+        width: 15rem;
+    }
+}
